# random-codes

./: Untitled1.cpp  Untitled2.cpp  a2oj  a2oj.cpp  div2.cpp  instagrambot.py  kekw.cpp  kk  kk.rs  labwork.c  lmao.html  lol.py  lol2.cpp  lol3.cpp  lolfk.cpp  novlong.cpp  ok  pointers  pointers.c  test.java
c/: labwork2.c
c++/: CMakeLists.txt  a2oj  a2oj.cpp  codingclub.cpp  div2  div2.cpp  equalcoins.cpp  far_away  far_away.cpp  idk  idk.cpp  kek.cpp  lights_out  lights_out.cpp  looo2.cpp  maximize_colours  maximize_colours.cpp  nearest_exit  nearest_exit.cpp  tempCodeRunnerFile  tempCodeRunnerFile.cpp  usaco.cpp
dart/: server.dart
html/: lmao.html
java/: test.java
lool1/: Untitled-1.cpp  lool1.cpp
python/: instagrambot.py  lol.py  sutt_backend.py
rust/: kk  kk.rs
