cmake_minimum_required(VERSION 3.23)
project(c__)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(c__
        a2oj.cpp
        codingclub.cpp
        div2.cpp
        equalcoins.cpp
        kek.cpp
        kekw.cpp
        lol2.cpp
        lol3.cpp
        lolfk.cpp
        looo2.cpp
        novlong.cpp
        Untitled1.cpp
        Untitled2.cpp
        usaco.cpp)
